docs/k8s/Automated Service Mesh with Istio/02-07/hostname-v3.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hostname-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostname
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hostname
        version: v3
    spec:
      containers:
      - image: rstarmer/hostname:v3
        imagePullPolicy: Always
        name: hostname
        resources: {}
      restartPolicy: Always
