docs/k8s/Automated Service Mesh with Istio/02-07/hostname-destinationrule-v2-v3.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hostname
spec:
  host: hostname
  subsets:
  - name: v3
    labels:
      version: v3
  - name: v2
    labels:
      version: v2
