docs/k8s/Automated Service Mesh with Istio/02-07/hostname-virtualservice-v2-v3.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hostname
spec:
  hosts:
  - "hostname.example.com"
  gateways:
  - hostname-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hostname
        port:
          number: 80
        subset: v2
      weight: 80
    - destination:
        host: hostname
        subset: v3
      weight: 20
